--- a/EmailTests/UserStory3_TestCase1.html
+++ b/EmailTests/UserStory3_TestCase1.html
@@ -22,8 +22,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>selectWindow</td>
-	<td>null</td>
+	<td>click</td>
+	<td>id=linkExchange</td>
 	<td></td>
 </tr>
 <tr>
@@ -49,11 +49,6 @@
 <tr>
 	<td>assertLocation</td>
 	<td>https://outlook.office365.com/owa/?realm=pitt.edu#path=/mail</td>
-	<td></td>
-</tr>
-<tr>
-	<td></td>
-	<td></td>
 	<td></td>
 </tr>
 </tbody></table>
