--- a/HomeButtonTests/UserStory4_TestCase4.html
+++ b/HomeButtonTests/UserStory4_TestCase4.html
@@ -22,13 +22,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForPageToLoad</td>
-	<td>1800000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>css=img[alt=&quot;My Home&quot;]</td>
+	<td>waitForNotLocation</td>
+	<td>https://my.pitt.edu/portal/server.pt/community/my_pitt_home/805</td>
 	<td></td>
 </tr>
 <tr>
